Reworked App Structure